--- a/src/sass/components/_progress.scss
+++ b/src/sass/components/_progress.scss
@@ -60,8 +60,6 @@ p {
   }
 
   &.progress-info {
-    margin-top: -4px;
-    margin-bottom: 0;
     clear: left;
     color: $gray-700;
     font-size: 80%;
